--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                 <li>Blog Platform</li>
                 <li>To-do List</li>
             </section>
-            <section id="Work Experience-middle">
+            <section id="work_experience-middle">
                 <h3>Work Experience</h3>
                 <p>roadmap.sh</p>
                 <p>Solve all the frontend projects</p>
@@ -41,7 +41,7 @@
                     <p>Visit my GitHub Profile</p>
                 </div>
             </section>
-            <section id="Education-right">
+            <section id="education-right">
                 <h3>Education</h3>
                 <p>Graduated with 3.76 out of 4 CGPA. Won Acme Hackathon. Organised 30 sessions.</p>
                 <p>Courses I took</p>
