--- a/home.html
+++ b/home.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A basic HTML website showcasing frontend development projects and experience.">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Frontend Development, Web Development">
+    <meta name="author" content="Jason Chambers">
     <title>Basic HTML Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
